# learningLanguageMachine

./: .gitignore  CLAUDE.md  README.md
.claude/skills/continue-course-content/: SKILL.md
.claude/skills/michi-verify/: SKILL.md
.claude/skills/theme-sync/: SKILL.md
.github/workflows/: deploy-pages.yml
apps/server/: .env.example  requirements.txt
apps/server/app/: auth.py  config.py  content.py  db.py  errors.py  identity.py  main.py  models.py  scoring.py  security.py  srs.py
apps/server/app/routers/: auth.py  converse.py  curriculum.py  health.py  progress.py  reviews.py  service.py  stats.py
apps/server/scripts/: backup_db.py  validate_content.py
apps/server/tests/: conftest.py  test_auth.py  test_converse.py  test_curriculum.py  test_health.py  test_identity.py  test_progress.py  test_reviews.py  test_service.py  test_srs.py  test_stats.py
apps/web/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
apps/web/src/: App.tsx  api.ts  auth.ts  converse.ts  index.css  itinerary.ts  mountainPatch.json  pathData.ts  settings.ts  theme.css
apps/web/src/audio/: stt.ts  tts.ts  useHoldToSpeak.ts
apps/web/src/components/: AnimatedKitsune.tsx  ConverseScene.tsx  KanaTrainer.tsx  LessonPlayer.tsx  LoginScreen.tsx  MichiMark.tsx  PathPage.tsx  PathScene.tsx  PathScene3D.test.ts  PathScene3D.tsx  PathScenery.tsx  PhrasebookPage.tsx  PlacementProbe.tsx  PracticePage.tsx  ReviewPlayer.tsx  SettingsPage.tsx  SpeakerAvatar.tsx  StatsPage.tsx  ThemeToggle.tsx
apps/web/src/components/exercises/: DialogueScene.tsx  KanaGlyph.tsx  ListenPick.tsx  ListenPickJp.tsx  ListenTypeRomaji.tsx  MatchPairs.tsx  Speak.tsx  TeachCard.tsx  TileArrange.tsx  shared.tsx
apps/web/src/curriculum/: loader.ts  types.ts
apps/web/src/engine/: grading.test.ts  grading.ts  placement.test.ts  placement.ts  reviewSession.ts  session.test.ts  session.ts  srs.test.ts  srs.ts
cinegrade-ae/: .gitignore  LICENSE  README.md
cinegrade-ae/docs/: BUILDING.md  DESIGN.md  PARAMETERS.md  PRESETS.md
cinegrade-ae/plugin/: CMakeLists.txt
cinegrade-ae/plugin/src/: CineGrade.cpp  CineGrade.h  CineGradeKernel.h  CineGrade_PiPL.r  PresetMap.h  Presets.h
cinegrade-ae/presets/: presets.json
cinegrade-ae/reference/: cinegrade.py  compare_kernel.py  grade_cli.py  make_test_frames.py  run_tests.py
cinegrade-ae/tests/: kernel_test.cpp
cinegrade-ae/tools/: check_pipl_flags.py  gen_presets_header.py
content/: manifest.json
content/kana/: hiragana.json  katakana.json
content/units/: u01.json  u02.json  u03.json  u04.json  u05.json  u06.json  u07.json  u08.json  u09.json  u10.json  u11.json  u12.json  u13.json  u14.json
docs/: API.md  ARCHITECTURE.md  AUTH.md  CONTENT_GUIDE.md  CURRICULUM.md  DATA_MODEL.md  DESIGN.md  HANDOFF.md  PLAN.md
docs/phases/: PHASE-1-scaffold.md  PHASE-2-content.md  PHASE-3-engine.md  PHASE-4-practice.md  PHASE-5-path-stats.md  PHASE-6-verify.md
scripts/: sync-theme.sh
tools/mountain-editor/: README.md  index.html
